# genetic_nn

./: .gitignore  CMakeLists.txt  README.md  connections.c  gen_re.c  main.c  maths.c  maths.h  neat.h  neurons.c  nn.c  params.h  redesign.c  structs.h  tests copy.c  tests.c
include/: connections.h  dataset.h  genome.h  innovation.h  maths.h  neurons.h  params.h  population.h
src/: connections.c  dataset.c  genome.c  innovation.c  maths.c  neurons.c  nn.c  population.c
tests/: CMakeLists.txt  genome_tests.c
